HW9 fix bugs
